--- a/less/style.less
+++ b/less/style.less
@@ -80,7 +80,7 @@ body{
 	text-align: center;
 
 	&--big{
-		height:486px;
+		height:460px;
 		box-sizing: border-box;
 	}
 }
@@ -247,6 +247,7 @@ body{
 		background: #fff;
 		padding: 15px 20px;
 		margin-bottom: 2px;
+		text-transform: uppercase;
 		.font(14px; 400; @base-color; 30px;)
 	}
 	&__item--selected{
