--- a/less/style.less
+++ b/less/style.less
@@ -19,11 +19,12 @@ body{
 }
 
 .wrapper-center{
-	width:320px;
+	min-width:320px;
+	max-width: 480px;
 	margin:0 auto;
 }
 .page-header{
-	background-color: rgba(28,37,47,.3);
+	
 	position: absolute;
 	top:0;
 	width:100%;
@@ -32,6 +33,7 @@ body{
 .page-header-wrap{
 	padding: 20px;
 	position: relative;
+	background-color: rgba(28,37,47,.3);
 }
 .logo, .open-menu-btn{
 	display: inline-block;
@@ -44,6 +46,7 @@ body{
 	height: 24px;
 	position: absolute;
 	right:20px;
+	cursor: pointer;
 }
 .mobile-menu{
 	background: @base-color;
@@ -74,18 +77,29 @@ body{
 .page-title{
 	.font(24px;300;white;auto;);
 	margin: 0;
-	background: url("../img/bg_header-min.jpg") no-repeat;
+	background: url("../img/bg_header.jpg") no-repeat;
+	background-size: cover;
 	padding: 20px;
 	padding-top: 80px;
 	padding-bottom: 45px; 
 	text-align: center;
 	height:198px;
 	box-sizing: border-box;
-
+	
 	&--big{
-		height:460px;
-		background: url("../img/bg_header.jpg") no-repeat;
-		
+		height:460px;	
+		position: relative;	
+	}
+
+	&--big:after{
+		content: "";
+		display: block;
+		position: absolute;
+		bottom: 0;
+		left:0;
+		width:320px;
+		height: 312px;
+		background: url("../img/page-header-iphone.png") no-repeat 0 20px;
 	}
 }
 .mobile-app{
@@ -127,11 +141,11 @@ body{
 		content: '';
 		display: block;
 		width: 100%;
-		height: 30px;
+		height: 45px;
 		transform: skewY(-5deg);
 		background: #f2f2f2;
 		position: absolute;
-		bottom: -35px;
+		bottom: -42px;
 		z-index: -1;
 	}
 	&__text{
@@ -206,17 +220,19 @@ body{
 		content: '';
 		display: block;
 		width: 100%;
-		height: 30px;
+		height: 45px;
 		transform: skewY(-5deg);
 		background: #f2f2f2;
 		position: absolute;
-		top: -15px;
+		top: -20px;
 		z-index: -1;
 	}
 }
 .tarif{
-	width: 275px;
-	margin:0 20px;
+	display: inline-block;
+	vertical-align: top;
+	width: 86%;
+	margin: 0 7%;
 
 	&__list{
 		padding: 0;
@@ -235,6 +251,7 @@ body{
 	}
 	&--hit{
 		position: relative;
+		top:0;
 
 		&:before{
 			content: '';
@@ -255,10 +272,10 @@ body{
 		.font(14px; 400; @base-color; 30px;)
 	}
 	&__item--selected{
-		background: #fff url('../img/selected.png') no-repeat 230px;
+		background: #fff url('../img/selected.png') no-repeat 92%;
 	}
 	&__item--nonselected{
-		background: #fff url('../img/non-selected.png') no-repeat 230px;
+		background: #fff url('../img/non-selected.png') no-repeat 92%;
 	}
 }
 .page-footer{
@@ -409,21 +426,19 @@ body{
 		margin: 0;
 		list-style:none;
 		font-size: 0;
+		text-align: center;
 	}
 	&__item{
 		display: inline-block;
 		vertical-align: top;
-		margin-right: 10px;
-	}
-	&__item:not(:first-child){
-		margin-right: 0;
+		margin-right: 3.6%;
+		width:21.4%;
 	}
 	&__link{
 		display: block;
 		padding: 15px 0;
-		width:60px;
+		
 		box-sizing: border-box;
-		text-align: center;
 		text-decoration: none;
 		border: 2px solid #e5e5e5;
 		border-radius: 3px;
@@ -435,17 +450,227 @@ body{
 	&__link--big{
 		display: inline-block;
 		vertical-align: top;
-		width:130px;
 		text-transform: uppercase;
+		width: 100%;
+
 	}
 	&__item--big{
-		margin-right: 20px;
+		margin-right: 7.4%;
+		width: 46.3%;
+		box-sizing: border-box;
+	}
+	&__item--big:nth-of-type(2){
+		margin-right: 0;
 	}
 	&__item--row{
-		display: block;
-		margin-top: 20px;	}
+		width: 100%;
+		margin-top: 20px;
+		margin-right: 0;	
+	}
 	&__link--row{
 		width: 100%;
 		text-transform: uppercase;
+	}
+}
+.wrap{
+	padding: 20px;
+
+	&--grey{
+		background: #f2f2f2;
+		padding: 20px;
+	}
+
+	&__title{
+		.font(14px;400;#d22856;18px;);
+		text-align: center;
+		text-transform: uppercase;
+	}
+}
+.form-title{
+	padding: 0 20px;
+	.font(14px;400;@base-color;30px;);
+	text-align: center;
+}
+.form-row{
+	margin-bottom: 10px;
+
+	&__title{
+		.font(14px;400;#d22856;30px;);
+		text-transform: uppercase;
+		display: block;
+		padding-left: 20px;
+	}
+	&__title--big{
+		.font(18px;400;@base-color;40px;);
+		text-transform: none;
+		margin-top: 30px;
+
+	}
+	input[type="text"]{
+		border: 2px solid #e5e5e5;
+		padding: 15px 20px;
+		.font(18px;400;@base-color;30px;);
+		border-radius: 2px;
+		width:100%;
+		box-sizing: border-box;
+	}
+	input[type="text"]:disabled{
+		color:@base-color;
+		background: #f2f2f2;
+	}
+	input[type="radio"], input[type="checkbox"]{
+		display: none;
+	}
+	&>input[type="radio"] + label{
+		padding-left: 60px;
+		background: url('../img/radio-btn.png') no-repeat left center;
+	}
+	&>input[type="radio"]:checked + label{
+		background: url('../img/radio-btn-checked.png') no-repeat left center;
+	}
+	&>input[type="checkbox"] + label{
+		padding-left: 60px;
+		background: url('../img/checkbox.png') no-repeat left center;
+	}
+	&>input[type="checkbox"]:checked + label{
+		background: url('../img/checkbox-checked.png') no-repeat left center;
+	}
+	&__content{
+		font-size: 0;
+		
+		input[type="text"]{
+			border-right: none;
+			border-left: none;
+			text-align: center;
+			color:@base-color;
+			padding: 15px 0;
+			display: table-cell;
+			vertical-align: top;
+		    width: 57.1%;
+		}
+		
+	}
+}
+.minus, .plus{
+		background: #fff url(../img/minus.png) no-repeat 50%;
+		text-align: center;
+		padding: 15px 20px;
+		border: 2px solid #e5e5e5;
+		height: 64px;
+		width:21.4%;
+		font-size:0;
+		display: table-cell;
+		vertical-align: top;
+}
+.plus{
+	background-image: url(../img/plus.png);
+}
+.traveler{
+	display: table;
+	width: 100%;
+}
+.left-col, .right-col{
+	display: table-cell;
+	vertical-align: top;
+}
+.left-col{
+	width: 20.7%;
+}
+.right-col{
+	width: 79.3%;
+}
+.col-title{
+	.font(14px;400;#d22856;30px;);
+}
+.traveler-number{
+	text-align: center;
+	padding: 15px 20px;
+	border: 2px solid #e5e5e5;
+	display: block;
+	height: 64px;
+	box-sizing: border-box;
+	border-right: none;
+}
+input[type="file"]{
+	display: none;
+}
+.upload{
+	border: 2px solid #e5e5e5;
+	padding: 15px 20px;
+	.font(18px;700;@base-color;30px;);
+	text-transform: uppercase;
+	text-align: center;
+	background: #fff;
+	display: block;
+	margin: 35px 0;
+	margin-bottom: 70px;
+	cursor: pointer;
+	position: relative;
+}
+.upload:after{
+	content: "";
+	display: block;
+	background: #e5e5e5;
+	height: 2px;
+	width: 100%;
+	position: absolute;
+	bottom: -35px;
+	left: 0;
+}
+.foto-wrap{
+	font-size: 0;
+}
+.foto{
+	display: inline-block;
+	vertical-align: top;
+	padding: 0;
+	position: relative;
+	margin: 0;
+	margin-right: 34px;
+	margin-bottom: 22px;
+	
+	@media (max-width: 375px){
+		&:nth-of-type(3n){
+			margin-right: 0;
+		}
+	}
+
+	&__close{
+		position: absolute;
+		top:-17px;
+		right:-17px;
+		background: url('../img/foto-close.png') no-repeat;
+		width:34px;
+		height: 34px;
+		border:none;
+
+	}
+	&__name{
+		text-transform: uppercase;
+		.font(12px;400;@base-color;18px;);
+	}
+}
+.btn{
+	&--green{
+		display: block;
+		width: 100%;
+		padding: 15px 0;
+		text-align: center;
+		.font(18px;700;#fff;30px;);
+		background: #2aab6d;
+		box-shadow: inset 0 0 0 1px #3bb278;
+		border: none;
+		border-radius: 3px;
+		text-transform: uppercase;
+		font-family: @font-family;
+	}
+}
+.note{
+	text-align: center;
+	text-transform: uppercase;
+	.font(14px;400;@base-color;30px;);
+	
+	.pink{
+		.font(14px;400;#d22856;30px;) 
 	}
 }
