--- a/less/style.less
+++ b/less/style.less
@@ -16,21 +16,15 @@ body{
 	padding:0;
 	margin:0;
 	font-family: @font-family;
-}
-
-.wrapper-center{
 	min-width:320px;
 	max-width: 480px;
-	margin:0 auto;
+	margin: 0 auto; 
 }
-.page-header{
-	
-	position: absolute;
-	top:0;
-	width:100%;
-	z-index: 1;
+.page-header__wrap{
+	background: url("../img/bg_header.jpg") no-repeat;
+	background-size: cover;
 }
-.page-header-wrap{
+.page-header-top{
 	padding: 20px;
 	position: relative;
 	background-color: rgba(28,37,47,.3);
@@ -77,17 +71,13 @@ body{
 .page-title{
 	.font(24px;300;white;auto;);
 	margin: 0;
-	background: url("../img/bg_header.jpg") no-repeat;
-	background-size: cover;
 	padding: 20px;
-	padding-top: 80px;
 	padding-bottom: 45px; 
 	text-align: center;
-	height:198px;
 	box-sizing: border-box;
 	
 	&--big{
-		height:460px;	
+		height:400px;	
 		position: relative;	
 	}
 
