--- a/less/style.less
+++ b/less/style.less
@@ -719,8 +719,33 @@ input[type="file"]{
 .delete{
 	display: none;
 }
+.map{
+	height: 200px;
+	position: relative;
+
+	iframe{
+		width: 100%;
+		height: 100%;
+		border: none;
+		frameborder:none;
+	}
+
+	&:before{
+		content: '';
+		display: block;
+		position: absolute;
+		top:0;
+		left:0;
+		width: 100%;
+		height: 100%;
+    	z-index: 1;
+    	box-sizing: border-box;
+    	background: url('../img/treug.svg') no-repeat;
+    	background-size: 100%;
+	}
+}
 /* Стили для планшета */
-@media(min-width: 481px) and (max-width: 940px) {
+@media (min-width: 481px) {
 	body{
 		min-width:480px;
 		max-width: 940px;
@@ -1156,6 +1181,15 @@ input[type="file"]{
 	}
 	.btn--green{
 		width: 43%;
+	}
+	.map{
+		height: 380px;
+	}
+	.page-footer{
+		&__title{
+			font-size: 40px;
+		}
+
 	}
 }
 
