--- a/less/style.less
+++ b/less/style.less
@@ -737,7 +737,7 @@ input[type="file"]{
 		top:0;
 		left:0;
 		width: 100%;
-		height: 100%;
+		height: 17.5%;
     	z-index: 1;
     	box-sizing: border-box;
     	background: url('../img/treug.svg') no-repeat;
@@ -1184,6 +1184,10 @@ input[type="file"]{
 	}
 	.map{
 		height: 380px;
+
+		&:before{
+			height: 25.5%;
+		}
 	}
 	.page-footer{
 		&__title{
