Верстка страниц блога

--- a/less/style.less
+++ b/less/style.less
@@ -1249,6 +1249,7 @@ input[type="file"]{
 
 		&__wrap{
 			background-image: url('../img/bg-header-full.jpg');
+			height: 395px;
 		}
 		&__wrap--big{
 			height: 854px;
@@ -1257,6 +1258,9 @@ input[type="file"]{
 				background-image: url("../img/page-header-iphone-desktop.png");
 			}
 		}
+	}
+	.page-title{
+		padding: 80px;
 	}
 	.page-title--min{
 		margin-left: 110px;
@@ -1372,5 +1376,19 @@ input[type="file"]{
 		&:before{
 			height: 38.5%;
 		}
+	}
+	.blog{
+		padding: 40px 11%;
+	}
+	.blog-item{
+		line-height: 30px;
+		margin-left: 60px;
+		margin-right: 0;
+	}
+	.pagination{
+		padding: 20px 11%;;
+	}
+	.blog-post{
+		padding: 40px 16%;
 	}
 }
