--- a/less/style.less
+++ b/less/style.less
@@ -608,14 +608,14 @@ body{
 	display: table;
 	width: 100%;
 }
-.left-col, .right-col{
+.left-col, .middle-col{
 	display: table-cell;
 	vertical-align: top;
 }
 .left-col{
 	width: 20.7%;
 }
-.right-col{
+.middle-col{
 	width: 79.3%;
 }
 .col-title{
@@ -1079,14 +1079,16 @@ input[type="file"]{
 	.wrap{
 		position: relative;
 		margin-bottom: 60px;
+		border: 2px solid #e5e5e5;
+		border-radius: 2px;
+		padding: 50px 60px;
 
 		&:first-of-type{
 			padding: 0;
+			border: none;
 		}
-		&:not(:first-of-type):not(:last-of-type){
-			border: 2px solid #e5e5e5;
-			border-radius: 2px;
-			padding: 50px 60px
+		&:last-of-type{
+			border: none;
 		}
 		&__title{
 			padding: 0 20px;
@@ -1127,7 +1129,7 @@ input[type="file"]{
 			font-size: 14px;
 		}	
 	}
-	.left-col, .right-col{
+	.left-col, .middle-col, .right-col{
 		display: inline-block;
 		vertical-align: top;
 	}
@@ -1139,16 +1141,21 @@ input[type="file"]{
 		background: #f2f2f2;
 		border: 2px solid #e5e5e5;
 	}
-	.right-col{
-		width: 85%; 
-
+	.middle-col{
+		width: 64.8%; 
 		.form-row__title{
 			margin: 0;
 		}
 		input[type="text"]{
-			width: 70%;
+			width: 100%;
 		}
 	}
+	.right-col{
+		padding-top: 45px;
+		width: 20%;
+		text-align: center;
+	}
+	
 	.form-row--min{
 			width: 48%;
 			min-width: 210px;
@@ -1160,7 +1167,6 @@ input[type="file"]{
 		border:none;
 		.font(14px;400;@base-color;30px;);
 		text-transform: uppercase;
-		width: 25%;
 		text-align: center;
 	}
 	.col-title{
@@ -1390,5 +1396,87 @@ input[type="file"]{
 	}
 	.blog-post{
 		padding: 40px 16%;
+	}
+	.form{
+		padding: 60px 11%;
+		padding-bottom: 0;
+
+		&-title{
+			font-size: 18px;
+			width: 80%;
+			margin: 0 auto;
+			margin-bottom: 50px;
+		}
+	}
+	.wrap:first-of-type, .wrap:nth-of-type(3){
+		font-size: 0;
+		
+		.form-row{
+			display: inline-block;
+			vertical-align: top;
+			width: 30%;
+			margin-right: 5%;
+		}
+		.form-row:last-of-type{
+			margin-right: 0;
+		}
+	}
+	.wrap:nth-of-type(3){
+		padding-bottom: 0;
+
+		.form-row:nth-of-type(2){
+			margin-right: 5%;
+		}
+	} 
+	.wrap:nth-of-type(2){
+		border:none;
+
+		.form-row{
+			display: inline-block;
+			vertical-align: top;
+			width: auto;
+			margin-right: 9%;
+		}
+		.form-row:last-of-type{
+			margin-right: 0;
+		}
+	}
+	.middle-col{ 
+		font-size: 0;
+
+		.form-row{
+			display: inline-block;
+			vertical-align: top;
+			width: 45%;
+			margin-right:5%; 
+		}
+		.form-row:last-of-type{
+			margin-right:0%; 
+		}
+	}
+	.wrap:nth-of-type(5){
+		font-size: 0;
+
+		.form-row{
+			display: inline-block;
+			vertical-align: top;
+			width: 30%;
+			margin-right:3.3%;
+		}
+		.form-row:nth-of-type(3n+1){
+			margin-right: 0;
+		}
+	}
+	.upload{
+		background: #d22856;
+		color:#fff;
+		border:none;
+		border-radius: 3px;
+	}
+	.foto{
+		margin-right: 5%;
+	}
+	.form-row--min{
+		width: 30%;
 	}
 }
