--- a/less/style.less
+++ b/less/style.less
@@ -1223,6 +1223,16 @@ input[type="file"]{
 		.font(14px;400;@base-color;30px;);
 		text-transform: uppercase;
 		text-align: center;
+
+		&:hover{
+			color:#d22856;
+			border-bottom: 1px solid #d22856;
+		}
+
+		&:active{
+			opacity: 0.3;
+			border-bottom: none;
+		}
 	}
 	.col-title{
 		text-align: center;
